--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@material/base": "^0.2.3",
+    "@material/button": "^0.3.11",
+    "@material/card": "^0.2.6",
     "@material/linear-progress": "^0.1.6",
     "core-js": "^2.4.1",
     "material-design-lite": "^1.3.0",
